# chennai_job_scout_agent

./: LICENSE  README.md  app.py  debug_env.py  pyproject.toml  requirements.txt
knowledge/: resume.txt
src/chennai_job_scout_agent/: crew.py  main.py
src/chennai_job_scout_agent/tools/: job_scraper.py
src/chennai_job_scout_agent/utils/: save_output.py
