[project]
name = "chennai_job_scout_agent"
version = "0.1.0"
description = "chennai-job-scout-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.14.1",
    "crewai[tools]==1.14.1",
    "langchain-openai>=1.1.13",
    "python-dotenv>=1.1.1",
]

[project.scripts]
chennai_job_scout_agent = "chennai_job_scout_agent.main:run"
run_crew = "chennai_job_scout_agent.main:run"
train = "chennai_job_scout_agent.main:train"
replay = "chennai_job_scout_agent.main:replay"
test = "chennai_job_scout_agent.main:test"
run_with_trigger = "chennai_job_scout_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
